--- a/css/navbar.css
+++ b/css/navbar.css
@@ -34,6 +34,9 @@
     text-align: center;
 
 }
+#navbar .navbar-container ul li  {
+
+}
 
 #navbar .navbar-container ul li a {
     width: 100%;
